# clustimage

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  clustimage_model.pkl  learned_model_v3.pkl  make_build.sh  make_clean.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_additional.txt  setup.py  setup.py.deprecated
.github/: FUNDING.yml  codecov.yml
.github/workflows/: codeql-analysis.yml  pytest.yml
clustimage/: __init__.py  clustimage.py  examples.py  exif.py  exif_df_magweg.py  plot_map_magweg.py
clustimage/tests/: test_blogcode.py  test_clustimage.py
docs/figs/: schematic_overview.pptx
docs/pages/doctrees/: Abstract.doctree  Algorithm.doctree  Blog.doctree  Cluster Evaluation.doctree  Coding quality.doctree  Cross validation and hyperparameter tuning.doctree  Documentation.doctree  Examples.doctree  Feature Embedding.doctree  Feature Extraction.doctree  Find.doctree  Installation.doctree  Performance.doctree  Pre-processing.doctree  Predict.doctree  Save and Load.doctree  clustimage.clustimage.doctree  core_functions.doctree  environment.pickle  index.doctree  prediction.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Abstract.html  Algorithm.html  Blog.html  Cluster Evaluation.html  Coding quality.html  Cross validation and hyperparameter tuning.html  Documentation.html  Examples.html  Feature Embedding.html  Feature Extraction.html  Find.html  Installation.html  Performance.html  Pre-processing.html  Predict.html  Save and Load.html  clustimage.clustimage.html  core_functions.html  genindex.html  index.html  objects.inv  prediction.html  py-modindex.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: Abstract.rst.txt  Blog.rst.txt  Cluster Evaluation.rst.txt  Documentation.rst.txt  Examples.rst.txt  Feature Extraction.rst.txt  Find.rst.txt  Installation.rst.txt  Performance.rst.txt  Pre-processing.rst.txt  Predict.rst.txt  Save and Load.rst.txt  clustimage.clustimage.rst.txt  core_functions.rst.txt  index.rst.txt  prediction.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Abstract.rst  Algorithm.rst  Blog.rst  Cluster Evaluation.rst  Coding quality.rst  Documentation.rst  Examples.rst  Feature Embedding.rst  Feature Extraction.rst  Find.rst  Installation.rst  Performance.rst  Predict.rst  Save and Load.rst  clustimage.clustimage.rst  conf.py  core_functions.rst  index.rst  prediction.rst
notebooks/: Handson_CNN_visualisatie_met_tsne.ipynb  Handson_embeddings_mixed_datasets.ipynb  Handson_embeddings_sensor.ipynb  Handson_quantile_norm.ipynb  Session_1_Clustering.ipynb  Session_2_Clustering_algorithms.ipynb  Session_3_Cluster_validation.ipynb
tests/: test_clustimage.py
